test/Kubernetes.Tests/testassets/port-mismatch/clusters.json
[
  {
    "ClusterId": "backend.default:5011",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
    },
    "Metadata": null
  }
]
