test/Kubernetes.Tests/testassets/port-mismatch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: port-mismatch
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5011
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: backend
  namespace: default
subsets:
  - addresses:
    - ip: 10.244.2.33
    ports:
    - port: 80
      protocol: TCP
